--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,34 @@
-.App {
-  text-align: center;
+.app-wrapper {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-areas: 
+  'h h'
+  'n c';
+  grid-template-rows: 60px 1fr;
+  grid-template-columns: 2fr 10fr;
+  grid-gap: 10px;
 }
-
-.App-logo {
-  height: 40vmin;
+.header {
+  grid-area: h;
+  background-color: green;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.header img {
+  width: 60px;
 }
-
-.App-link {
-  color: #09d3ac;
+.nav {
+  grid-area: n;
+  background-color: burlywood;
+}
+.nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.nav ul a {
+  text-decoration: none;
+}
+.content {
+  grid-area: c;
+  background-color: cornflowerblue;
 }
