--- a/src/App.css
+++ b/src/App.css
@@ -1,34 +1,19 @@
 .app-wrapper {
   max-width: 1200px;
-  margin: 0 auto;
+  margin: 10px auto;
+  padding: 10px;
+  border: 1px solid black;
   display: grid;
-  grid-template-areas: 
-  'h h'
-  'n c';
-  grid-template-rows: 60px 1fr;
+  grid-template-areas:
+    'h h'
+    'n c';
+  grid-template-rows: 1fr;
   grid-template-columns: 2fr 10fr;
   grid-gap: 10px;
 }
-.header {
-  grid-area: h;
-  background-color: green;
-}
-.header img {
-  width: 60px;
-}
-.nav {
-  grid-area: n;
-  background-color: burlywood;
-}
-.nav ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-.nav ul a {
-  text-decoration: none;
-}
-.content {
+
+.app-wrapper-content {
   grid-area: c;
-  background-color: cornflowerblue;
+  border: 1px solid #000;
+  padding: 5px;
 }
