--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,11 +1,13 @@
 .nav {
    grid-area: n;
    border: 1px solid black;
+   padding: 5px;
+   background-color: lightgray;
  }
- .nav ul {
+ .navList {
    list-style: none;
    margin: 0;
-   padding: 5px;
+   padding: 0;
  }
  .item {
    text-align: center;
@@ -24,6 +26,15 @@
   font-size: 18px;
   color: #000;
 }
-.item.active a{
-  color: green;
+.item .active{
+  color: red;
+}
+
+.friendsList {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 5px;
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
