--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -4,6 +4,7 @@
    grid-gap: 5px;
    height: 100%;
 }
+
 .dialogsList {
    list-style: none;
    margin: 0;
@@ -18,12 +19,18 @@
    padding: 5px;
    border: 1px solid black;
 }
+
 .messagesList {
+   display: flex;
+   flex-flow: column;
+   justify-content: flex-end;
+
    list-style: none;
    margin: 0;
-   padding: 5px;
+   padding: 5px 5px 0 5px;
    border: 1px solid black;
 }
+
 .addMessage {
    display: grid;
    grid-template-columns: 8fr 2fr;
@@ -31,6 +38,7 @@
    padding: 5px;
    border: 1px solid black;
 }
+
 .addMessage textarea {
    resize: none;
 }
