--- a/src/components/Users/User/User.module.css
+++ b/src/components/Users/User/User.module.css
@@ -1,22 +1,11 @@
-
-.item {
-    display: flex;
-    border: 1px solid red;
-    margin-bottom: 10px;
-    padding: 10px;
+.user {
+    display: grid;
+    grid-template-columns: 55px auto 60px;
+    grid-gap: 10px;
+    border: 1px solid #ccc;
+    margin-bottom: 5px;
+    padding: 5px;
 }
 .userAvatar {
-    width: 70px;
-}
-/* span {
-    border: 1px solid black;
-    padding: 0 5px;
-    cursor: pointer;
-}
-span:hover {
-    background-color: #ccc;
-} */
-.selectedPage {
-    color: red;
-    font-weight: bold;
+    width: 55px;
 }
