--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,18 @@
 .app-wrapper {
   max-width: 960px;
   margin: 0 auto;
-  padding: 10px;
+  padding: 5px;
   display: grid;
   grid-template-areas:
     'header header'
     'navbar content';
   grid-template-rows: 1fr;
   grid-template-columns: 2fr 10fr;
-  grid-gap: 10px;
+  grid-gap: 5px;
 }
 
 .app-wrapper-content {
   grid-area: content;
-  border: 1px solid #000;
-  padding: 5px;
   background-color: #fff;
+  position: relative;
 }
