--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -27,9 +27,7 @@
    display: flex;
    flex-flow: column;
    justify-content: flex-end;
-
    list-style: none;
    margin: 0;
-   padding: 5px 5px 0 5px;
-   border: 1px solid black;
+   padding: 0px;
 }
