--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -1,8 +1,31 @@
 .profileInfo {
     display: grid;
     grid-template-rows: 1fr;
-    grid-template-columns: 3fr 7fr;
-    grid-gap: 20px;
+    grid-template-columns: 210px auto;
+    grid-gap: 5px;
+    background-color: #EDEEF0;
+    position: relative;
+}
+.profilePhotoContainer {
+    align-self: start;
+}
+.profilePhotoContainer a {
+    text-decoration: none;
+    display: block;
+    background-color: #0073A3;
+    color: #fff;
+    text-align: center;
+    line-height: 2;
+}
+
+
+
+.userDescription {
+    display: grid;
+    grid-template-rows: auto auto auto;
+    grid-gap: 5px;
+    background-color: #fff;
+    padding: 5px;
 }
 .userFullName {
     margin: 0;
