--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -1,10 +1,10 @@
 .users {
-    padding: 5px;
-    border: 1px solid black
+    display: grid;
+    grid-template-rows: auto auto;
+    grid-gap: 5px;
 }
 .usersList {
     margin: 0;
-    padding: 10px;
-    border: 1px solid blue;
+    padding: 5px;
     list-style: none;
 }
