many fixes, deploy

--- a/src/components/common/FormsControls/FormsControls.module.css
+++ b/src/components/common/FormsControls/FormsControls.module.css
@@ -1,13 +1,36 @@
 .formControl {
     display: flex;
-    /* flex-flow: row wrap; */
+    flex-flow: column;
+    margin-bottom: 10px;
 }
 .formControl textarea {
     resize: none;
     width: 100%;
 }
-
-
-.inputContainer {
+input[type=text],
+input[type=password],
+input[type=email] {
+    width: 100%;
+    box-sizing: border-box;
+    text-align: center;
+    border: 1px solid #ccc;
+    padding: 5px 10px;
+    font-size: 16px;
+    border-radius: 5px;
+}
+/* .inputContainer {
     display: flex;
+} */
+.errorMessage,
+.warningMessage {
+    padding: 5px;
+    border-radius: 5px;
+    text-align: center;
+    margin-top: 5px;
+}
+.errorMessage {
+    background-color: #ffb6b6;
+}
+.warningMessage {
+    background-color: #f6ffba;
 }
