--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -4,10 +4,33 @@
     left: 50%;
     transform: translate(-50%, -50%);
     border: 1px solid #ccc;
-    padding: 10px;
+    padding: 20px;
+    border-radius: 10px;
 }
-.login span {
+.login .loginTitle {
     display: block;
     margin-bottom: 20px;
     text-align: center;
+    font-size: 30px;
+}
+
+
+/* --------------------------- test acces ------------------------- */
+.testAccess {
+    margin-top: 10px;
+    background-color: darksalmon;
+    padding: 10px;
+    font-size: 12px;
+    border-radius: 5px;
+}
+.testAccessTitle {
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    display: block;
+    text-align: center;
+}
+
+.testAccess div > span {
+    width: 70px;
+    display: inline-block;
 }
