--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -1,11 +1,9 @@
 .login {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     border: 1px solid #ccc;
     padding: 20px;
     border-radius: 10px;
+    max-width: 250px;
+    margin: 0 auto;
 }
 .login .loginTitle {
     display: block;
