--- a/src/components/Login/LoginForm/LoginForm.module.css
+++ b/src/components/Login/LoginForm/LoginForm.module.css
@@ -1,9 +1,13 @@
+.loginForm div {
+    margin-bottom: 10px;
+}
 .loginBtn {
     width: 100%;
+    padding: 10px;
 }
 .commonError {
-    display: inline-block;
-    border: 1px solid red;
-    padding: 5px;
-    color: red;
+    margin-top: 10px;
+    background-color: #ffb6b6;
+    padding: 10px;
+    border-radius: 5px;
 }
