--- a/src/components/Profile/MyPosts/Post/Post.module.css
+++ b/src/components/Profile/MyPosts/Post/Post.module.css
@@ -1,8 +1,37 @@
-.item {
+.post {
    display: flex;
+   flex-flow: column;
    border: 1px solid #ccc;
-   margin: 5px;
+   margin-bottom: 5px;
 }
-.item img {
+.postHeader {
+   display: flex;
+   align-items: center;
+   margin: 10px 10px 0px;
+}
+.post img {
    width: 50px;
+   margin-right: 15px;
+}
+.postAuthor {
+   margin: 0;
+}
+.postDate {
+   font-size: 12px;
+   color: #363636;
+}
+/* ---------------- */
+.postContent {
+   padding: 5px 10px;
+}
+
+.likeWrap .likeIcon {
+   color: #9e9e9e;
+   cursor: pointer;
+}
+.likeWrap .likeIcon:hover {
+   color: green;
+}
+.likeWrap span {
+   margin-left: 7px;
 }
