--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -2,5 +2,6 @@
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: auto auto;
-    grid-gap: 5px;
+    grid-gap: 10px;
+    position: relative;
 }
