--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -1,9 +1,10 @@
 .login {
-    border: 1px solid #ccc;
+    border: 1px solid var(--DARK-GRAY);
     padding: 20px;
-    border-radius: 10px;
+    border-radius: 5px;
     max-width: 250px;
     margin: 0 auto;
+    background-color: var(--WHITE)
 }
 .login .loginTitle {
     display: block;
@@ -11,8 +12,6 @@
     text-align: center;
     font-size: 30px;
 }
-
-
 /* --------------------------- test acces ------------------------- */
 .testAccess {
     margin-top: 10px;
