--- a/src/components/Profile/ProfileInfo/ProfileData/ProfileData.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileData/ProfileData.module.css
@@ -1,14 +1,31 @@
 .profileData {
     line-height: 150%;
 }
+.profileDataShort,
+.profileDataContacts {
+    border-top: 1px solid #ccc;
+    margin-top: 10px;
+    position: relative;
+    padding-top: 10px;
+}
+.profileDataHeader {
+    position: absolute;
+    font-size: 13px;
+    top: -10px;
+    left: 15px;
+    display: block;
+    line-height: 16px;
+    background-color: var(--WHITE);
+    padding: 0px 5px;
+}
 .profileDataRow {
     display: flex;
     font-size: 13px;
 }
 .rowLabel {
-    width: 170px;
-    color: #828282;
+    flex-basis: 160px;
+    color: var(--DARK-GRAY);
 }
-.profileDataContacts span {
-    padding-left: 30px;
+.rowLabeled {
+    flex: 1 1;
 }
