--- a/src/components/Profile/ProfileInfo/ProfilePhoto/ProfilePhoto.module.css
+++ b/src/components/Profile/ProfileInfo/ProfilePhoto/ProfilePhoto.module.css
@@ -1,12 +1,11 @@
 .userPhotoContainer {
     position: relative;
-    height: 200px;
-    background-color: #fff;
-    margin-bottom: 5px;
 }
 .userPhotoContainer img {
+    display: block;
     width: 100%;
     height: 100%;
+    border-radius: 2px;
 }
 .userPhotoContainer:hover form {
     display: flex;
