--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,23 @@
 * {
   box-sizing: border-box;
 }
+:root {
+  --WHITE: #ffffff;
+  --BLACK: #000000;
+  --RED: #ffb6b6;
+  --YELLOW: #f6ffba;
+  --LIGHT-GRAY: #edeef0;
+  --DARK-GRAY: #828282;
+  --SOFT-BLUE: #c7dff1;
+  --LIGHT-BLUE: #6ea6ce;
+  --DARK-BLUE: #2a5885;
+}
 body {
   margin: 0;
   padding: 0;
-  background-color: #EDEEF0;
+  background-color: var(--LIGHT-GRAY);
+  width: 100%;
+  height: 100vh;
 
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
