--- a/src/index.css
+++ b/src/index.css
@@ -4,13 +4,14 @@
 :root {
   --WHITE: #ffffff;
   --BLACK: #000000;
-  --RED: #ffb6b6;
-  --YELLOW: #f6ffba;
   --LIGHT-GRAY: #edeef0;
   --DARK-GRAY: #828282;
   --SOFT-BLUE: #c7dff1;
   --LIGHT-BLUE: #6ea6ce;
   --DARK-BLUE: #2a5885;
+  --RED: #a21c13;
+  --LIGHT-RED: #ffb6b6;
+  --YELLOW: #f6ffba;
 }
 body {
   margin: 0;
