--- a/src/components/Dialogs/Dialog/Dialog.module.css
+++ b/src/components/Dialogs/Dialog/Dialog.module.css
@@ -3,41 +3,58 @@
    border-radius: 5px;
    overflow: hidden;
    margin-bottom: 5px;
+   position: relative;
 }
 .dialogItem:hover {
-   background-color: var(--DARK-GRAY)
+   background-color: var(--WHITE)
 }
 .dialogItem .active {
    background-color: var(--DARK-BLUE);
    color: #fff;
 }
-.dialogItem a {
+.dialogPhoto {
+   width: 38px;
+   height: 38px;
+   display: block;
+   position: absolute;
+   top: 50%;
+   left: 5px;
+   transform: translateY(-50%);
+   z-index: 1;
+   border-radius: 50%;
+   overflow: hidden;
+   transition: all 0.3s;
+}
+.dialogPhoto:hover::after {
+   content: '';
+   width: 100%;
+   height: 100%;
+   background-color: rgba(0,0,0,0.3);
+   position: absolute;
+   top: 0;
+   left: 0;
+}
+.dialogPhoto img {
+   width: 100%;
+   height: 100%;
+}
+.dialogBody {
    display: flex;
    align-items: center;
    text-decoration: none;
-   color: black;
-   padding: 5px;
    position: relative;
-}
-.dialogPhoto {
-   margin-right: 15px;
-   width: 48px;
-   height: 48px;
-}
-.dialogPhoto img {
-   width: 48px;
-   height: 48px;
-   border-radius: 50%;
-   overflow: hidden;
+   height: 50px;
+   padding-left: 60px;
+   color: black;
 }
 .dialogMeta {
    position: absolute;
    right: 10px;
 }
-.dialogMeta .newMessagesCount {
+/* .dialogMeta .newMessagesCount {
    background: #bfbfbf;
    font-size: 11px;
    padding: 5px;
    border-radius: 11px;
    min-width: 21px;
-}
+} */
