--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -14,42 +14,38 @@
    overflow: hidden;
    margin-bottom: 3px;
  }
+.item .active{
+  background-color: var(--DARK-BLUE);
+  color: var(--WHITE);
+}
 .item:hover {
   background-color: var(--WHITE)
 }
+.item .active svg{
+  color: #fff;
+  opacity: 1;
+}
 .item a {
   position: relative;
-  display: block;
+  display: flex;
+  align-items: center;
   text-decoration: none;
   font-size: 18px;
   padding: 5px 10px;
   color: #000;
 }
-.item svg {
+.item a svg {
   color: #ccc;
   width: 15px !important;
   margin-right: 10px;
   color: #285473;
   opacity: 0.75;
 }
-.item .active{
-  background-color: var(--DARK-BLUE);
-  color: var(--WHITE);
-}
-.item .active svg{
-  color: #fff;
-  opacity: 1;
-}
 
-.newMessagesCounter {
-  position: absolute;
-  right: 0;
-  background: #bfbfbf;
-  font-size: 11px;
-  padding: 5px;
-  border-radius: 11px;
+.item a .title {
+  flex-grow: 1;
 }
-
+/* ------------------------------------------------------------- */
 .friends {
   padding: 5px;
 }
