actions types refactoring

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
   --LIGHT-BLUE: #6ea6ce;
   --DARK-BLUE: #2a5885;
   --RED: #a21c13;
-  --LIGHT-RED: #ffb6b6;
+  --PINK: #ffb6b6;
   --YELLOW: #f6ffba;
 }
 body {
