--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,8 @@
   --LIGHT-GRAY: #edeef0;
   --DARK-GRAY: #828282;
   --SOFT-BLUE: #c7dff1;
-  --LIGHT-BLUE: #6ea6ce;
-  --DARK-BLUE: #2a5885;
+  --LIGHT-BLUE: #F0F2F5;
+  --DARK-BLUE: #4A76A8;
   --RED: #a21c13;
   --PINK: #ffb6b6;
   --YELLOW: #f6ffba;
